<resources>
    <string name="app_name">Myoitc</string>
    <string name="Username">Email Id</string>
    <string name="Password">Password</string>
    <string name="login">LOG IN</string>

    <string name="google_key">AIzaSyBc6FMGtSXejHgXxGnoAxxFhw_RexZRg1E</string>

    <!--JAGADISHA   AIzaSyAWSNJ2-Kdk2aNtM1aqJpaLGhtL3ZZpCMk-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="checkin">CHECK IN</string>
    <string name="checkout">CHECK OUT</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="nodatafound">No Data Found</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="gpsonnectionnotfound">Gps Connection Not Found</string>
    <string name="cancel">Cancel</string>
    <string name="internetconnectionnotfound">Internet Connection Not Found \n Do You Want To Turn On ?</string>
    <string name="intenert">Internet Connection</string>
    <string name="turnon">Turn On / Retry</string>
    <string name="gpsconection">GPS Connection</string>
    <string name="imagedesc">Image</string>
    <string name="communicate">Communicate</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="nav_taskmanagemnt">Task Management</string>
    <string name="img_transaction">Image Transaction</string>
    <string name="route">Route</string>
    <string name="task_date">Check In Time</string>
    <string name="task_time">Check Out Time</string>
    <string name="client_initial">Client Initial</string>
    <string name="submit">Submit</string>
    <string name="lunch_time">Lunch Time</string>
    <string name="client">Client</string>
    <string name="service">Service</string>
    <string name="paycode">Paycode</string>
    <string name="initial">Initial</string>
    <string name="time_sheet">Time Sheet</string>
    <string name="search">Search</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">EMAIL</string>
    <string name="phone">PHONE</string>
    <string name="address">ADDRESS</string>
    <string name="dob">DOB</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="request_for_services">Request for Services</string>
    <string name="social_security">Social Security</string>
    <string name="choose_file">CHOOSE FILE</string>
    <string name="comments">COMMENTS</string>
    <string name="review_and_acknowledge">Review and acknowledge</string>
    <string name="duration">DURATION</string>
    <string name="hourspervisit">HOURSperVISIT</string>
    <string name="freqeuncy">FREQEUNCY</string>
    <string name="start_of_the_care_date">START OF THE CARE DATE</string>
    <string name="medicare">Medicare</string>
    <string name="other_insurance">OTHER INSURANCE</string>
    <string name="policy">POLICY</string>
    <string name="private_pay">PRIVATE PAY</string>
    <string name="refer_physician">REFER PHYSICIAN</string>
    <string name="giving_refferal">GIVING REFFERAL</string>
    <string name="fax">FAX</string>
    <string name="price">Price : %s</string>
    <string name="empty">-</string>
    <string name="company">Company : %s</string>
    <string name="ttype">Type : %s</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">Mobile</string>
    <string name="nav_timesheet">Time Sheet</string>
    <string name="nav_client_cart">Client Chart</string>
    <string name="nav_checkin">Check In</string>
    <string name="nav_absent_tracker">Absent Tracker</string>
    <string name="nav_profile">Employee Profile</string>
    <string name="nav_request_list">Request List</string>
    <string name="nav_choose_pack">Choose Package</string>
    <string name="nav_travel_amp">Travel Map</string>


</resources>
