<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/request_for_services"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/social_security"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_customerSecurity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/choose_file"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/spinner_customerInquiring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/spinner_corner"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/spinner_customerHearAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/spinner_corner"
                    android:spinnerMode="dialog" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_customerComments"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:hint="@string/comments"
                        android:maxLength="2000"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/customer_checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/review_and_acknowledge"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>