<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center"

            android:padding="@dimen/_2sdp"
            android:text="@string/intenert"
            android:layout_margin="@dimen/_5sdp"
            android:layout_height="wrap_content" />


        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"
            app:lottie_fileName="nointernet.json"
            />




        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/_14sdp"

            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/internetconnectionnotfound"
            android:layout_margin="@dimen/_5sdp"
            android:layout_height="wrap_content" />



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_height="wrap_content">



            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                card_view:cardElevation="@dimen/_2sdp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/ic_enable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/bg_full_"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/turnon"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </androidx.cardview.widget.CardView>



        </LinearLayout>



    </LinearLayout>









</RelativeLayout>