<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Demographics"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner_requestTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_corner"
                    android:spinnerMode="dialog" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_demographicFirstName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_demographicLastName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_demographic_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="#3949AB">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_demographicPhone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="#3949AB">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="numberSigned"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_demographicAddress"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="#3949AB">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_demographicStartDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:background="@drawable/spinner_corner"
                        android:hint="@string/start_of_the_care_date"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/_12sdp" />

                    <ImageView
                        android:id="@+id/img_demographicStartDate"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:src="@drawable/ic_svg_calendar" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_demographicCity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="#3949AB">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_demographicState"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_demographicZipCode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="#3949AB">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/zip_code"
                        android:inputType="numberSigned"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner_chooseCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/spinner_corner"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
