<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Provider Referral Form"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_physicians"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/refer_physician"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:id="@+id/txt_givingReferral"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/giving_refferal"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_referral_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/spinner_corner"
            android:spinnerMode="dialog" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_fax"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fax"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:id="@+id/txt_phoneNumber"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="numberSigned"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>
